robotarmymade/robotarmymade-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    site: robotarmymade
  name: robotarmymade-deployment
  namespace: apps
spec:
  replicas: 2
  selector:
    matchLabels:
      site: robotarmymade
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        site: robotarmymade
    spec:
      containers:
      - image: c8n.io/robotarmy/robotarmymade-site:0.1.0-lite
        imagePullPolicy: IfNotPresent
        name: robotarmymade-site
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 300m
            memory: 8Mi
          requests:
            cpu: 200m
            memory: 4Mi
      imagePullSecrets:
      - name: c8n-robotarmy
      restartPolicy: Always
