robotarmymade/robotarmymade-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    site: robotarmymade
  name: robotarmymade-service
  namespace: apps
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    site: robotarmymade
status:
  loadBalancer: {}
