robotarmymade/robotarmymade-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels: 
    site: robotarmymade
  name: robotarmymade-ingress
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: robotarmyma.de
    http:
      paths:
      - backend:
          service:
            name: robotarmymade-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - robotarmyma.de
    secretName: tls-de-robotarmyma
